@@ -134,9 +134,8 @@ class ApiQueryWatchlist extends ApiQueryGeneratorBase {
 
 		$db = $this->getDB();
 
-		$this->addWhereRange( 'rc_timestamp', $params['dir'],
-			$db->timestamp( $params['start'] ),
-			$db->timestamp( $params['end'] ) );
+		$this->addTimestampWhereRange( 'rc_timestamp', $params['dir'], 
+			$params['start'], $params['end'] );
 		$this->addWhereFld( 'wl_namespace', $params['namespace'] );
 
 		if ( !$params['allrev'] ) {
